# Cerebro

./: .env.example  .gitignore  README.md  pyproject.toml
src/wechat_agent/: __init__.py  cli.py  config.py  db.py  models.py  schemas.py  time_utils.py
src/wechat_agent/migrations/: README.md
src/wechat_agent/providers/: feed_parser.py  search_index_provider.py  template_feed_provider.py  wechat2rss_discovery_provider.py  wechat_web_discovery_provider.py  weread_discovery_provider.py
src/wechat_agent/services/: coverage_service.py  discovery_orchestrator.py  fetcher.py  message_extractor.py  read_state.py  recommender.py  session_vault.py  source_gateway.py  source_resolver.py  subscription_binder.py  summarizer.py  sync_service.py  wechat_web_client.py
src/wechat_agent/views/: table_renderer.py
tests/: conftest.py  test_cli_integration.py  test_config_ai.py  test_coverage_service.py  test_recommender.py  test_session_vault.py  test_source_gateway.py  test_source_resolver.py  test_summarizer.py  test_sync_service.py  test_table_renderer.py  test_v2_cli.py  test_v3_auth_cli.py
